Add dynamic agent flag to remove warning for tests